--- a/package.json
+++ b/package.json
@@ -34,16 +34,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/tailwindcss": "^3.0.11",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "postcss": "8.5.6"
   }
 }
